dark mode bug fix

--- a/src/Info.module.scss
+++ b/src/Info.module.scss
@@ -133,3 +133,15 @@ main.dark {
     }
   }
 }
+.errorPage.dark {
+  background-color: #050505;
+  h1 {
+    color: white;
+  }
+  h2 {
+    color: white;
+  }
+  p {
+    color: white;
+  }
+}
